--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Global Game Jam 2021/Packages/packages-lock.json
+Global Game Jam 2021/Packages/packages-lock.json
